bulk query osm and wikidata by location (bounding box) and translate values, retaining source of data.
