# server/api/controllers/examples/router.js
@@ -4,3 +4,4 @@ import controller from './controller';
 export default express
   .Router()
   .get('/fountain/', controller.byCoords)
+  .get('/fountains/', controller.byLocation)
